fixed bvhNode crash due to nullptr leaves and incorrect surroundingBox generation

--- a/visual studio/Raytracer/Raytracer/Raytracer.vcxproj
+++ b/visual studio/Raytracer/Raytracer/Raytracer.vcxproj
@@ -94,7 +94,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>OpenImageDenoise.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\Repositories\RaytracerInOneWeekend\vendor\OIDN;D:\Repositories\RaytracerInOneWeekend\vendor\OIDN;%(AdditionalLibraryDirectories);D:\Repositories\RaytracerInOneWeekend\vendor\OIDN</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\Git_repos\RaytracerInOneWeekend\vendor\OIDN;D:\Repositories\RaytracerInOneWeekend\vendor\OIDN;D:\Repositories\RaytracerInOneWeekend\vendor\OIDN;%(AdditionalLibraryDirectories);D:\Repositories\RaytracerInOneWeekend\vendor\OIDN</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -113,7 +113,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>OpenImageDenoise.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\Repositories\RaytracerInOneWeekend\vendor\OIDN;D:\Repositories\RaytracerInOneWeekend\vendor\OIDN;%(AdditionalLibraryDirectories);D:\Repositories\RaytracerInOneWeekend\vendor\OIDN</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\Git_repos\RaytracerInOneWeekend\vendor\OIDN;D:\Repositories\RaytracerInOneWeekend\vendor\OIDN;D:\Repositories\RaytracerInOneWeekend\vendor\OIDN;%(AdditionalLibraryDirectories);D:\Repositories\RaytracerInOneWeekend\vendor\OIDN</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -128,7 +128,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>OpenImageDenoise.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\Repositories\RaytracerInOneWeekend\vendor\OIDN;;D:\Repositories\RaytracerInOneWeekend\vendor\OIDN</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\Git_repos\RaytracerInOneWeekend\vendor\OIDN;D:\Repositories\RaytracerInOneWeekend\vendor\OIDN;;D:\Repositories\RaytracerInOneWeekend\vendor\OIDN</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -147,7 +147,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>OpenImageDenoise.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\Repositories\RaytracerInOneWeekend\vendor\OIDN;;D:\Repositories\RaytracerInOneWeekend\vendor\OIDN</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\Git_repos\RaytracerInOneWeekend\vendor\OIDN;D:\Repositories\RaytracerInOneWeekend\vendor\OIDN;;D:\Repositories\RaytracerInOneWeekend\vendor\OIDN</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
