--- a/visual studio/Raytracer/Raytracer/Raytracer.vcxproj.filters
+++ b/visual studio/Raytracer/Raytracer/Raytracer.vcxproj.filters
@@ -75,6 +75,12 @@
     <ClInclude Include="..\..\..\vendor\stb\stb_image_write.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\source\instance.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\vendor\glm\glm.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\source\main.cpp">
